@@ -156,11 +156,11 @@ div.contextmenu ul.iconized li a.cmd_mark-all-read span.icon
 
 div.contextmenu ul.iconized li a.collapseall span.icon
 {
-  background-position: 7px -203px;
+  background-position: 7px -219px;
 }
 div.contextmenu ul.iconized li a.expandall span.icon
 {
-  background-position: 7px -219px;
+  background-position: 7px -203px;
 }
 
 div.contextmenu ul.iconized li a.cmd_expunge span.icon
