@@ -131,11 +131,11 @@ html.touch {
 div.contextmenu {
   a {
     &.cmd_plugin-contextmenu-collapseall::before {
-      .font-icon-regular(@fa-var-minus-square);
+      content: @fa-var-angle-right;
     }
 
     &.cmd_plugin-contextmenu-expandall::before {
-      .font-icon-regular(@fa-var-plus-square);
+      content: @fa-var-angle-down;
     }
 
     &.cmd_plugin-contextmenu-openextwin::before {
