@@ -2,8 +2,8 @@
 <div id="rcmfolder-menu" class="popupmenu">
     <h3 id="aria-label-rcmfolder-menu" class="voice"><roundcube:label name="arialabelmailboxmenu" /></h3>
     <ul class="menu listing" role="menu" aria-labelledby="aria-label-rcmfolder-menu">
-        <roundcube:button type="link-menuitem" command="plugin.contextmenu.collapseall" label="contextmenu.collapseall" class="collapseall disabled" classAct="collapseall active" />
-        <roundcube:button type="link-menuitem" command="plugin.contextmenu.expandall" label="contextmenu.expandall" class="expandall disabled" classAct="expandall active" />
+        <roundcube:button type="link-menuitem" command="plugin.contextmenu.collapseall" prop="treelist" label="contextmenu.collapseall" class="collapseall disabled" classAct="collapseall active" />
+        <roundcube:button type="link-menuitem" command="plugin.contextmenu.expandall" prop="treelist" label="contextmenu.expandall" class="expandall disabled" classAct="expandall active" />
         <roundcube:button type="link-menuitem" command="plugin.contextmenu.openextwin" label="openinextwin" class="openextwin rcm-active disabled" classAct="openextwin rcm_active active" />
     </ul>
 </div>
