@@ -5,3 +5,12 @@
         <roundcube:button type="link-menuitem" command="plugin.contextmenu.openextwin" label="openinextwin" class="openextwin rcm-active disabled" classAct="openextwin rcm-active active" />
     </ul>
 </div>
+<roundcube:if condition="env:action == 'folders'" />
+<div id="rcmfolder-menu" class="popupmenu">
+    <h3 id="aria-label-rcmfolder-menu" class="voice"><roundcube:label name="arialabelmailboxmenu" /></h3>
+    <ul class="menu listing" role="menu" aria-labelledby="aria-label-rcmfolder-menu">
+        <roundcube:button type="link-menuitem" command="plugin.contextmenu.collapseall" prop="subscription_list" label="contextmenu.collapseall" class="collapseall disabled" classAct="collapseall active" />
+        <roundcube:button type="link-menuitem" command="plugin.contextmenu.expandall" prop="subscription_list" label="contextmenu.expandall" class="expandall disabled" classAct="expandall active" />
+    </ul>
+</div>
+<roundcube:endif />
