@@ -2,9 +2,9 @@
 <div id="rcmfolder" class="popupmenu">
     <h3 id="aria-label-rcmfolder" class="voice"><roundcube:label name="arialabelmailboxmenu" /></h3>
     <ul id="rcmfoldermenu" class="toolbarmenu" role="menu" aria-labelledby="aria-label-rcmfolder">
-        <roundcube:button type="link-menuitem" command="plugin.contextmenu.collapseall" label="contextmenu.collapseall" classAct="active" class="collapseall" />
-        <roundcube:button type="link-menuitem" command="plugin.contextmenu.expandall" label="contextmenu.expandall" classAct="active" class="expandall" />
-        <roundcube:button type="link-menuitem" command="plugin.contextmenu.openextwin" label="openinextwin" classAct="active" class="openextwin rcm-active" />
+        <roundcube:button type="link-menuitem" command="plugin.contextmenu.collapseall" prop="treelist" label="contextmenu.collapseall" classAct="collapseall active" class="collapseall" />
+        <roundcube:button type="link-menuitem" command="plugin.contextmenu.expandall" prop="treelist" label="contextmenu.expandall" classAct="expandall active" class="expandall" />
+        <roundcube:button type="link-menuitem" command="plugin.contextmenu.openextwin" label="openinextwin" class="openextwin rcm-active" />
     </ul>
 </div>
 <roundcube:endif />
