@@ -1,7 +1,16 @@
 <div id="rcmsettings" class="popupmenu">
     <h3 id="aria-label-rcmsettings" class="voice"><roundcube:label name="arialabellistselectmenu" /></h3>
     <ul id="rcmsettingsmenu" class="toolbarmenu" role="menu" aria-labelledby="aria-label-rcmsettings">
-        <roundcube:button type="link-menuitem" command="plugin.contextmenu.openinline" label="open" classAct="active" class="openinline rcm-active" />
-        <roundcube:button type="link-menuitem" command="plugin.contextmenu.openextwin" label="openinextwin" classAct="active" class="openextwin rcm-active" />
+        <roundcube:button type="link-menuitem" command="plugin.contextmenu.openinline" label="open" class="openinline rcm-active" />
+        <roundcube:button type="link-menuitem" command="plugin.contextmenu.openextwin" label="openinextwin" class="openextwin rcm-active" />
     </ul>
 </div>
+<roundcube:if condition="env:action == 'folders'" />
+<div id="rcmfolder" class="popupmenu">
+    <h3 id="aria-label-rcmfolder" class="voice"><roundcube:label name="arialabelmailboxmenu" /></h3>
+    <ul id="rcmfoldermenu" class="toolbarmenu" role="menu" aria-labelledby="aria-label-rcmfolder">
+        <roundcube:button type="link-menuitem" command="plugin.contextmenu.collapseall" prop="subscription_list" label="contextmenu.collapseall" classAct="collapseall active" class="collapseall" />
+        <roundcube:button type="link-menuitem" command="plugin.contextmenu.expandall" prop="subscription_list" label="contextmenu.expandall" classAct="expandall active" class="expandall" />
+    </ul>
+</div>
+<roundcube:endif />
